force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/Apttus_Approval__ApprovalRuleAssignee__c.object-meta.xml
<CustomObject>
    <description>Represents a single assignee in an approval rule entry</description>
    <label>Approval Rule Assignee</label>
    <nameField>
        <displayFormat>RA-{0000000000}</displayFormat>
        <label>Assignee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Rule Assignees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>