force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeAutoEscalate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeAutoEscalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true if this rule assignee should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
    <inlineHelpText>This field is set to true if this rule assignee should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
    <label>Assignee Auto Escalate</label>
    <type>Checkbox</type>
</CustomField>