force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeDescription__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeDescription__c</fullName>
    <description>The assignee description</description>
    <label>Assignee Description</label>
    <type>TextArea</type>
</CustomField>