force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeEscalateToId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeEscalateToId__c</fullName>
    <description>The id of the assignee the request will be escalated to if it is escalated at the rule assignee level.</description>
    <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the rule assignee level.</inlineHelpText>
    <label>Assignee Escalate To Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>