force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeExpectedDaysToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeExpectedDaysToComplete__c</fullName>
    <description>The number of expected days that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
    <inlineHelpText>The number of expected days that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
    <label>Assignee Expected Days To Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>