force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeExpectedHoursToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeExpectedHoursToComplete__c</fullName>
    <description>The number of expected hours that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
    <inlineHelpText>The number of expected hours that this approval rule assignee needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
    <label>Assignee Expected Hours To Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>