force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeId__c</fullName>
    <description>ID of the assignee. Only applicable for User, Role or Queue. Internally maintained by the application.</description>
    <inlineHelpText>ID of the assignee. Only applicable for User, Role or Queue. Internally maintained by the application.</inlineHelpText>
    <label>Assignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>