force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeLabel__c</fullName>
    <description>The assignee label</description>
    <label>Assignee Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>