force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AssigneeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeType__c</fullName>
    <description>The assignee type</description>
    <label>Assignee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval Matrix</fullName>
            </value>
            <value>
                <fullName>Custom Queue</fullName>
            </value>
            <value>
                <fullName>Custom Role</fullName>
            </value>
            <value>
                <fullName>Custom User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>