force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__AutoComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the request should be auto approved</description>
    <inlineHelpText>Flag to indicate if the request should be auto approved</inlineHelpText>
    <label>Auto Complete</label>
    <type>Checkbox</type>
</CustomField>