force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__RuleEntryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__RuleEntryId__c</fullName>
    <description>ID of the associated rule entry</description>
    <label>Rule Entry</label>
    <referenceTo>Apttus_Approval__ApprovalRuleEntry__c</referenceTo>
    <relationshipLabel>Assignees</relationshipLabel>
    <relationshipName>ApprovalRuleAssignees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>