force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__SendEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SendEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether an email notification should be sent to the assignee</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>