force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__SendReminders__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SendReminders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminders</label>
    <type>Checkbox</type>
</CustomField>