force-app/main/default/objects/Apttus_Approval__ApprovalRuleAssignee__c/fields/Apttus_Approval__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Sequence__c</fullName>
    <description>The rule assignee sequence</description>
    <label>Assignee Sequence</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>